--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Diode Quiz</title>
+    <title>다이오드 퀴즈</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -55,43 +55,53 @@
 <body>
     <div class="container">
         <div id="quiz">
-            <div class="question" id="question">Loading...</div>
+            <div class="question" id="question">로딩 중...</div>
             <div class="options" id="options"></div>
             <div class="result" id="result"></div>
         </div>
     </div>
 
     <script>
-        // Quiz data
+        // 퀴즈 데이터
         const quizData = [
             {
-                question: "Which direction does current flow in a diode?",
-                options: ["From P to N", "From N to P", "Both directions", "No current flows"],
+                question: "다이오드에서 전류는 어느 방향으로 흐르나요?",
+                options: ["P에서 N으로", "N에서 P로", "양방향으로", "전류가 흐르지 않음"],
                 answer: 0
             },
             {
-                question: "In a circuit, the LED is not lighting up. What could be wrong?",
+                question: "다음 회로에서 LED가 켜지지 않는 이유는 무엇일까요?",
                 options: [
-                    "The diode is reversed",
-                    "The circuit has no power source",
-                    "The resistor value is too high",
-                    "All of the above"
+                    "다이오드 방향이 반대로 연결됨",
+                    "전원 공급 장치가 없음",
+                    "저항 값이 너무 큼",
+                    "위의 모든 이유"
                 ],
                 answer: 3
             },
             {
-                question: "What happens if you reverse a diode in a circuit?",
+                question: "다이오드를 회로에서 반대로 연결하면 어떻게 될까요?",
                 options: [
-                    "Current flows normally",
-                    "Current stops flowing",
-                    "The diode emits light",
-                    "The diode heats up"
+                    "전류가 정상적으로 흐름",
+                    "전류가 흐르지 않음",
+                    "다이오드가 빛을 냄",
+                    "다이오드가 가열됨"
                 ],
+                answer: 1
+            },
+            {
+                question: "다음 회로에서 X와 Y는 각각 어떤 극(P형 반도체, N형 반도체)인가요? (참고: A와 D가 켜질 때)",
+                options: ["X는 P, Y는 N", "X는 N, Y는 P", "둘 다 P", "둘 다 N"],
+                answer: 0
+            },
+            {
+                question: "스위치를 b에 연결했을 때 B와 C가 켜진다면 X와 Y의 극은 무엇인가요?",
+                options: ["X는 N, Y는 P", "X는 P, Y는 N", "둘 다 P", "둘 다 N"],
                 answer: 1
             }
         ];
 
-        // DOM elements
+        // DOM 요소
         const questionEl = document.getElementById("question");
         const optionsEl = document.getElementById("options");
         const resultEl = document.getElementById("result");
@@ -99,7 +109,7 @@
         let currentQuestion = 0;
         let score = 0;
 
-        // Load a question
+        // 질문 로드
         function loadQuestion() {
             const currentQuiz = quizData[currentQuestion];
             questionEl.textContent = currentQuiz.question;
@@ -114,19 +124,19 @@
             });
         }
 
-        // Check the selected answer
+        // 정답 확인
         function checkAnswer(selected) {
             const correct = quizData[currentQuestion].answer;
             if (selected === correct) {
                 score++;
-                resultEl.textContent = "Correct!";
+                resultEl.textContent = "정답입니다!";
                 resultEl.style.color = "green";
             } else {
-                resultEl.textContent = "Wrong!";
+                resultEl.textContent = "오답입니다!";
                 resultEl.style.color = "red";
             }
 
-            // Move to the next question or finish the quiz
+            // 다음 질문 또는 퀴즈 종료
             setTimeout(() => {
                 currentQuestion++;
                 if (currentQuestion < quizData.length) {
@@ -137,14 +147,14 @@
             }, 1000);
         }
 
-        // Finish the quiz
+        // 퀴즈 종료
         function finishQuiz() {
-            questionEl.textContent = `You completed the quiz!`;
-            optionsEl.innerHTML = `Your score: ${score}/${quizData.length}`;
+            questionEl.textContent = `퀴즈 완료!`;
+            optionsEl.innerHTML = `점수: ${score}/${quizData.length}`;
             resultEl.textContent = "";
         }
 
-        // Initialize the quiz
+        // 퀴즈 초기화
         loadQuestion();
     </script>
 </body>
