--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
         // 퀴즈 데이터
         const quizData = [
             {
-                question: "다이오드에서 전류는 어느 방향으로 흐르나요?",
+                question: "이곳에 문제 입력",
                 circuit: "",
-                options: ["P에서 N으로", "N에서 P로", "양방향으로", "전류가 흐르지 않음"],
+                options: ["답변1", "답변2", "답변3", "답변4"],
                 answer: 0
             },
             {
-                question: "다음 회로에서 LED가 켜지지 않는 이유는 무엇일까요?",
+                question: "이곳에 문제 입력",
                 circuit: `<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 200 100' width='200'>
                             <line x1='10' y1='50' x2='50' y2='50' stroke='black' stroke-width='2'/>
                             <polygon points='50,40 70,50 50,60' fill='none' stroke='black' stroke-width='2'/>
@@ -84,27 +84,17 @@
                             <line x1='120' y1='50' x2='160' y2='50' stroke='black' stroke-width='2'/>
                             <circle cx='160' cy='50' r='5' fill='black'/>
                         </svg>`,
-                options: [
-                    "다이오드 방향이 반대로 연결됨",
-                    "전원 공급 장치가 없음",
-                    "저항 값이 너무 큼",
-                    "위의 모든 이유"
-                ],
+                options: ["답변1", "답변2", "답변3", "답변4"],
                 answer: 3
             },
             {
-                question: "다이오드를 회로에서 반대로 연결하면 어떻게 될까요?",
+                question: "이곳에 문제 입력",
                 circuit: "",
-                options: [
-                    "전류가 정상적으로 흐름",
-                    "전류가 흐르지 않음",
-                    "다이오드가 빛을 냄",
-                    "다이오드가 가열됨"
-                ],
+                options: ["답변1", "답변2", "답변3", "답변4"],
                 answer: 1
             },
             {
-                question: "다음 회로에서 X와 Y는 각각 어떤 극(P형 반도체, N형 반도체)인가요? (참고: A와 D가 켜질 때)",
+                question: "이곳에 문제 입력",
                 circuit: `<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 200 100' width='200'>
                             <line x1='10' y1='50' x2='50' y2='50' stroke='black' stroke-width='2'/>
                             <polygon points='50,40 70,50 50,60' fill='none' stroke='black' stroke-width='2'/>
@@ -115,11 +105,11 @@
                             <circle cx='150' cy='50' r='10' fill='none' stroke='black' stroke-width='2'/>
                             <text x='145' y='70' font-size='10'>Y</text>
                         </svg>`,
-                options: ["X는 P, Y는 N", "X는 N, Y는 P", "둘 다 P", "둘 다 N"],
+                options: ["답변1", "답변2", "답변3", "답변4"],
                 answer: 0
             },
             {
-                question: "스위치를 b에 연결했을 때 B와 C가 켜진다면 X와 Y의 극은 무엇인가요?",
+                question: "이곳에 문제 입력",
                 circuit: `<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 200 100' width='200'>
                             <line x1='10' y1='50' x2='50' y2='50' stroke='black' stroke-width='2'/>
                             <polygon points='50,40 70,50 50,60' fill='none' stroke='black' stroke-width='2'/>
@@ -130,7 +120,7 @@
                             <circle cx='150' cy='50' r='10' fill='none' stroke='black' stroke-width='2'/>
                             <text x='145' y='70' font-size='10'>Y</text>
                         </svg>`,
-                options: ["X는 N, Y는 P", "X는 P, Y는 N", "둘 다 P", "둘 다 N"],
+                options: ["답변1", "답변2", "답변3", "답변4"],
                 answer: 1
             }
         ];
