--- a/index.html
+++ b/index.html
@@ -76,14 +76,7 @@
             },
             {
                 question: "이곳에 문제 입력",
-                circuit: `<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 200 100' width='200'>
-                            <line x1='10' y1='50' x2='50' y2='50' stroke='black' stroke-width='2'/>
-                            <polygon points='50,40 70,50 50,60' fill='none' stroke='black' stroke-width='2'/>
-                            <line x1='70' y1='50' x2='100' y2='50' stroke='black' stroke-width='2'/>
-                            <rect x='100' y='40' width='20' height='20' fill='none' stroke='black' stroke-width='2'/>
-                            <line x1='120' y1='50' x2='160' y2='50' stroke='black' stroke-width='2'/>
-                            <circle cx='160' cy='50' r='5' fill='black'/>
-                        </svg>`,
+                circuit: "",
                 options: ["답변1", "답변2", "답변3", "답변4"],
                 answer: 3
             },
@@ -95,31 +88,13 @@
             },
             {
                 question: "이곳에 문제 입력",
-                circuit: `<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 200 100' width='200'>
-                            <line x1='10' y1='50' x2='50' y2='50' stroke='black' stroke-width='2'/>
-                            <polygon points='50,40 70,50 50,60' fill='none' stroke='black' stroke-width='2'/>
-                            <line x1='70' y1='50' x2='100' y2='50' stroke='black' stroke-width='2'/>
-                            <circle cx='100' cy='50' r='10' fill='none' stroke='black' stroke-width='2'/>
-                            <text x='95' y='70' font-size='10'>X</text>
-                            <line x1='110' y1='50' x2='150' y2='50' stroke='black' stroke-width='2'/>
-                            <circle cx='150' cy='50' r='10' fill='none' stroke='black' stroke-width='2'/>
-                            <text x='145' y='70' font-size='10'>Y</text>
-                        </svg>`,
+                circuit: "",
                 options: ["답변1", "답변2", "답변3", "답변4"],
                 answer: 0
             },
             {
                 question: "이곳에 문제 입력",
-                circuit: `<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 200 100' width='200'>
-                            <line x1='10' y1='50' x2='50' y2='50' stroke='black' stroke-width='2'/>
-                            <polygon points='50,40 70,50 50,60' fill='none' stroke='black' stroke-width='2'/>
-                            <line x1='70' y1='50' x2='100' y2='50' stroke='black' stroke-width='2'/>
-                            <circle cx='100' cy='50' r='10' fill='none' stroke='black' stroke-width='2'/>
-                            <text x='95' y='70' font-size='10'>X</text>
-                            <line x1='110' y1='50' x2='150' y2='50' stroke='black' stroke-width='2'/>
-                            <circle cx='150' cy='50' r='10' fill='none' stroke='black' stroke-width='2'/>
-                            <text x='145' y='70' font-size='10'>Y</text>
-                        </svg>`,
+                circuit: "",
                 options: ["답변1", "답변2", "답변3", "답변4"],
                 answer: 1
             }
